--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -102,3 +102,39 @@
  year={2008},
  publisher={IEEE}
 }
+
+@misc{sgbm,
+  author = {itseez},
+  title = {{Opencv Doc}},
+  month = July,
+  year = {2012},
+  howpublished = "\url{http://docs.opencv.org/java/org/opencv/calib3d/StereoSGBM.html}"
+}
+
+@misc{mideval,
+  author = {Daniel Scharstein},
+  title = {{MiddleBury Evaluation}},
+  month = July,
+  year = {2012},
+  howpublished = "\url{http://vision.middlebury.edu/stereo/eval/}"
+}
+
+@misc{kitti,
+  author = {Andreas Geiger},
+  title = {{KITTI Vision}},
+  month = September,
+  year = {2012},
+  howpublished = "\url{http://www.cvlibs.net/datasets/kitti/eval_stereo_flow.php?benchmark=stereo }"
+}
+
+@article{azuma01,
+  title={Recent advances in augmented reality},
+  author={Azuma, Ronald and Baillot, Yohan and Behringer, Reinhold and Feiner, Steven and Julier, Simon and MacIntyre, Blair},
+  journal={Computer Graphics and Applications, IEEE},
+  volume={21},
+  number={6},
+  pages={34--47},
+  year={2001},
+  publisher={IEEE}
+}
+
