--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -138,3 +138,107 @@
   publisher={IEEE}
 }
 
+
+@book{hart2000,
+  title={Multiple view geometry in computer vision},
+  author={Hartley, Richard and Zisserman, Andrew},
+  volume={2},
+  year={2000},
+  publisher={Cambridge Univ Press}
+}
+
+@article{oku93,
+  title={A multiple-baseline stereo},
+  author={Okutomi, Masatoshi and Kanade, Takeo},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={15},
+  number={4},
+  pages={353--363},
+  year={1993},
+  publisher={IEEE}
+}
+@article{bol87,
+  title={Epipolar-plane image analysis: An approach to determining structure from motion},
+  author={Bolles, Robert C and Baker, H Harlyn and Marimont, David H},
+  journal={International Journal of Computer Vision},
+  volume={1},
+  number={1},
+  pages={7--55},
+  year={1987},
+  publisher={Springer}
+}
+
+@article{sch02,
+  title={A taxonomy and evaluation of dense two-frame stereo correspondence algorithms},
+  author={Scharstein, Daniel and Szeliski, Richard},
+  journal={International journal of computer vision},
+  volume={47},
+  number={1-3},
+  pages={7--42},
+  year={2002},
+  publisher={Springer}
+}
+
+@article{hsie92,
+ title={Performance Evaluation of Scene Registration and Stereo Matching for Artographic Feature Extraction},
+ author={Hsieh, Yuan C and McKeown Jr, David M and Perlant, Frederic P},
+ journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+ volume={14},
+ number={2},
+ pages={214--238},
+ year={1992},
+ publisher={IEEE Computer Society}
+}
+
+@article{matt89,
+ title={Kalman filter-based algorithms for estimating depth from image sequences},
+ author={Matthies, Larry and Kanade, Takeo and Szeliski, Richard},
+ journal={International Journal of Computer Vision},
+ volume={3},
+ number={3},
+ pages={209--238},
+ year={1989},
+ publisher={Springer}
+}
+
+@article{hirsch02,
+ title={Real-time correlation-based stereo vision with reduced border errors},
+ author={Hirschm{\"u}ller, Heiko and Innocent, Peter R and Garibaldi, Jon},
+ journal={International Journal of Computer Vision},
+ volume={47},
+ number={1-3},
+ pages={229--246},
+ year={2002},
+ publisher={Springer}
+}
+
+@article{bobi99,
+ title={Large occlusion stereo},
+ author={Bobick, Aaron F and Intille, Stephen S},
+ journal={International Journal of Computer Vision},
+ volume={33},
+ number={3},
+ pages={181--200},
+ year={1999},
+ publisher={Springer}
+}
+
+@inproceedings{boyk01,
+ title={Interactive graph cuts for optimal boundary \& region segmentation of objects in ND images},
+ author={Boykov, Yuri Y and Jolly, M-P},
+ booktitle={Computer Vision, 2001. ICCV 2001. Proceedings. Eighth IEEE International Conference on},
+ volume={1},
+ pages={105--112},
+ year={2001},
+ organization={IEEE}
+}
+
+@inproceedings{roy98,
+ title={A maximum-flow formulation of the n-camera stereo correspondence problem},
+ author={Roy, S{\'e}bastien and Cox, Ingemar J},
+ booktitle={Computer Vision, 1998. Sixth International Conference on},
+ pages={492--499},
+ year={1998},
+ organization={IEEE}
+}
+
